--- a/Praktikum 2 - Text Properties.html
+++ b/Praktikum 2 - Text Properties.html
@@ -10,7 +10,7 @@
             text-align: center;
             text-decoration: underline;
             text-transform: uppercase;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0, 5);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
             line-height: 1.5;
             letter-spacing: 2px;
             word-spacing: 4px;
